# pax

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  dev.blex.pax.yml  pax.desktop
.claude/projects/-home-xb-dev-sinelec-me-myterms/memory/: MEMORY.md  project_macos_ram.md
.github/workflows/: release.yml
config/: default_workspace.json  editor_test.json  mixed_workspace.json  simple_test.json  tabs_workspace.json  workspace_save_config.json  workspace_save_test.json
crates/tp-assistant/: Cargo.toml
crates/tp-assistant/src/: context.rs  lib.rs  protocol.rs  redaction.rs  task.rs
crates/tp-cli/: Cargo.toml
crates/tp-cli/src/: main.rs
crates/tp-core/: Cargo.toml  build.rs
crates/tp-core/src/: alert.rs  build_info.rs  config.rs  lib.rs  notebook_tag.rs  safety.rs  sandbox.rs  ssh.rs  template.rs  workspace.rs
crates/tp-db/: Cargo.toml
crates/tp-db/src/: assistant.rs  commands.rs  lib.rs  markdown_documents.rs  metadata_entries.rs  notes.rs  output.rs  preferences.rs  schema.rs  workspace_notes.rs  workspaces.rs
crates/tp-gui/: Cargo.toml
crates/tp-gui/src/: actions.rs  app.rs  assistant.rs  assistant_tasks.rs  backend_factory.rs  focus.rs  fonts.rs  host_spawn.rs  icons.rs  keymap.rs  layout_ops.rs  lib.rs  markdown_export.rs  markdown_render.rs  notifications.rs  panel_host.rs  recent_markdown.rs  shortcuts.rs  test_support.rs  theme.rs  voice_live.rs  voice_provider.rs  voice_session.rs  voice_settings.rs  voice_tools.rs  widget_builder.rs  workspace_launcher.rs  workspace_view.rs
crates/tp-gui/src/dialogs/: color_customizer.rs  command_history.rs  keybindings.rs  mermaid_designer.rs  metadata_manager.rs  mod.rs  notebook_help.rs  notes_dialog.rs  open_workspace_choice.rs  panel_config.rs  settings.rs
crates/tp-gui/src/notebook/: cell.rs  engine.rs  helpers.py  mod.rs  output.rs  runner.rs
crates/tp-gui/src/panels/: browser.rs  chooser.rs  docker_help.rs  markdown.rs  mod.rs  registry.rs  terminal.rs  terminal_registry.rs  text_sync.rs
crates/tp-gui/src/panels/editor/: completion_lifecycle.rs  diff_view.rs  dirty_state.rs  editor_tabs.rs  file_backend.rs  file_tree.rs  file_watcher.rs  fuzzy_finder.rs  git_log.rs  git_status.rs  image_view.rs  language_support.rs  markdown_view.rs  mod.rs  notes_ruler.rs  notes_state.rs  overview_ruler.rs  project_search.rs  tab_activation.rs  tab_content.rs  task.rs  text_content.rs  text_context_menu.rs  text_shortcuts.rs
crates/tp-gui/src/panels/notes/: alert_scheduler.rs  card.rs  editor_dialog.rs  list.rs  mod.rs
crates/tp-gui/src/panels/terminal/: export.rs  footer.rs  input.rs  mod.rs  pty_backend.rs  script_runner.rs  scroll_to_bottom.rs  shell_bootstrap.rs  vte_backend.rs
crates/tp-gui/src/widgets/: alert_tray.rs  command_palette.rs  mod.rs  quick_switcher.rs  status_bar.rs  voice_command.rs  welcome.rs
crates/tp-pty/: Cargo.toml
crates/tp-pty/src/: lib.rs  manager.rs  multiplexer.rs  output.rs
crates/tp-tui/: Cargo.toml
crates/tp-tui/src/: app.rs  layout.rs  lib.rs
crates/tp-tui/src/panels/: markdown.rs  mod.rs  terminal.rs
crates/tp-tui/src/widgets/: palette.rs
docs/: BUILD.md  notebook.md  shell-integration.md  theme.md  voice-commands.md
docs/superpowers/plans/: 2026-03-31-code-editor-panel.md  2026-04-22-editor-media-viewers.md  2026-04-23-file-notes.md  2026-04-27-markdown-notebook.md  2026-04-28-file-auto-reload.md  2026-04-28-panel-move-siblings.md  2026-04-30-terminal-command-history.md
docs/superpowers/specs/: 2026-03-31-code-editor-panel-design.md  2026-04-16-dotted-glow-bg-design.md  2026-04-22-editor-media-viewers-design.md  2026-04-23-file-notes-design.md  2026-04-27-markdown-notebook-design.md  2026-04-28-file-auto-reload-design.md  2026-04-28-panel-move-siblings-design.md  2026-04-30-terminal-command-history-design.md
docs/ui/mockups/: generate_mockups.py
examples/: notebook-demo.md
migrations/: 001_initial.sql
packaging/flatpak/: pax.sh
resources/: dev.blex.pax.metainfo.xml  style.css
resources/share/icons/Pax/: index.theme
resources/sourceview-styles/: pax-aurora.xml  pax-catppuccin-latte.xml  pax-catppuccin-mocha.xml  pax-dracula.xml  pax-graphite.xml  pax-hologram.xml  pax-neon-porcelain.xml  pax-nord.xml  pax-quantum.xml
scripts/: build-appimage-docker.sh  build-appimage.sh  build-macos.sh  flatpak.sh  pax-voice-transcribe-gemini.py
