[package]
name = "pax"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pax"
path = "src/main.rs"

[dependencies]
pax-core = { workspace = true }
pax-gui = { workspace = true }
pax-db = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
dirs = "6"
