[package]
name = "pax-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
dirs = "6"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
