[package]
name = "pax-db"
version.workspace = true
edition.workspace = true

[dependencies]
pax-core = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
