[package]
name = "pax-gui"
version.workspace = true
edition.workspace = true

[features]
default = ["vte", "sourceview"]
vte = ["dep:vte4"]
sourceview = ["dep:sourceview5"]

[dependencies]
pax-core = { workspace = true }
pax-db = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
vte4 = { version = "0.8", optional = true }
portable-pty = "0.8"
alacritty_terminal = "0.26"
pangocairo = "0.20"
fuzzy-matcher = "0.3"
sourceview5 = { version = "0.9", optional = true }
ignore = "0.4"
similar = "2"
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
uuid = { workspace = true }
