[package]
name = "pax-gui"
version.workspace = true
edition.workspace = true

[features]
default = ["vte", "sourceview"]
vte = ["dep:vte4"]
sourceview = ["dep:sourceview5"]

[dependencies]
pax-core = { workspace = true }
pax-db = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
vte4 = { version = "0.8", features = ["v0_70"], optional = true }
portable-pty = "0.8"
alacritty_terminal = "0.26"
pangocairo = "0.20"
fuzzy-matcher = "0.3"
sourceview5 = { version = "0.9", optional = true }
ignore = "0.4"
similar = "2"
pulldown-cmark = { version = "0.12", default-features = false }
# Pure-Rust syntax highlighter: drives the markdown render-mode code blocks
# without spawning one GtkSourceView5 widget (and one resize-polling timer)
# per fence. `default-fancy` swaps the C `onigmo` regex backend for the pure
# Rust `fancy-regex` engine so the macOS no-default-features build still
# compiles, and keeps the bundled syntaxes/themes.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
unicode-width = "0.2"
# Move-to-trash for local file/dir deletion (XDG freedesktop spec on Linux)
# so that accidental deletes remain recoverable via the system file manager.
trash = "5"
regex = { workspace = true }
# `libc::tcgetpgrp` powers the OSC 133 fallback used when the linked
# VTE runtime (or the PTY backend's shell) does not report shell
# integration signals.
libc = "0.2"
chrono = "0.4"
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
# Tests that touch GTK / glib must not race: gtk4::init() panics when
# called from a second thread, and glib's default main context can only
# host one MainLoop at a time. `#[serial]` from this crate ensures every
# such test runs on its own.
serial_test = "3"
