[package]
name = "tp-tui"
version.workspace = true
edition.workspace = true

[dependencies]
tp-core = { workspace = true }
tp-pty = { workspace = true }
tp-db = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
uuid = { workspace = true }
fuzzy-matcher = "0.3"
vt100 = "0.15"
